--- a/package.json
+++ b/package.json
@@ -21,10 +21,9 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@libsql/client": "^0.5.0",
     "@types/bcrypt": "^6.0.0",
     "bcrypt": "^6.0.0",
-    "better-sqlite3": "^12.5.0",
-    "better-sqlite3-session-store": "^0.1.0",
     "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
