--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
+    "recharts": "^2.12.7",
+    "socket.io-client": "^4.8.3",
     "uuid": "^13.0.0",
     "zod": "^3.25.76",
-    "recharts": "^2.12.7"
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@hookform/resolvers": "^5.2.1",
