Fix SSL config for Neon PostgreSQL

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 DATABASE_URL=postgresql://neondb_owner:npg_Bcixum6fShG5@ep-purple-frost-a1cuaz43-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require
 SESSION_SECRET=nistha_production_secret_2024_secure
 PORT=8080
+NODE_ENV=development
