Themes and music added

--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,11 @@ APP_BASE_URL=http://localhost:8080
 # Legacy Turso variables (no longer used after PostgreSQL migration)
 # TURSO_DATABASE_URL=
 # TURSO_AUTH_TOKEN=
+
+# Razorpay Payment Gateway
+# Get your keys from: https://dashboard.razorpay.com → Settings → API Keys
+# Use test keys (rzp_test_xxx) for development, live keys (rzp_live_xxx) for production
+RAZORPAY_KEY_ID=rzp_test_YOUR_KEY_ID
+RAZORPAY_KEY_SECRET=YOUR_KEY_SECRET
+# Optional: Webhook secret for payment notifications
+# RAZORPAY_WEBHOOK_SECRET=YOUR_WEBHOOK_SECRET
