--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "pg": "^8.18.0",
+    "razorpay": "^2.9.6",
     "recharts": "^2.12.7",
     "socket.io": "^4.8.3",
     "socket.io-client": "^4.8.3",
