--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,16 @@ PORT=8080
 # PostgreSQL Database (Neon)
 # Get your connection string from: https://console.neon.tech
 DATABASE_URL=postgresql://user:password@ep-xxx.region.aws.neon.tech/neondb?sslmode=require
+# DB pool size (use with Neon pooled connection string)
+# DB_POOL_MAX=25
+
+# Redis (for production session store)
+# Example: redis://default:password@host:port/0
+REDIS_URL=redis://default:password@host:6379/0
+# Optional session key prefix
+# REDIS_SESSION_PREFIX=nistha:sess:
+# Optional strict mode: crash startup if Redis is unavailable
+# REDIS_REQUIRED=true
 
 # Public base URL used in reset links (e.g. https://app.example.com)
 APP_BASE_URL=http://localhost:8080
