--- a/package.json
+++ b/package.json
@@ -21,17 +21,17 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@libsql/client": "^0.5.0",
     "@types/bcrypt": "^6.0.0",
-    "@types/pg": "^8.16.0",
     "bcrypt": "^6.0.0",
+    "connect-redis": "^8.0.2",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.5",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
-    "pg": "^8.18.0",
+    "mongodb": "^6.21.0",
     "razorpay": "^2.9.6",
     "recharts": "^2.12.7",
+    "redis": "^4.7.0",
     "socket.io": "^4.8.3",
     "socket.io-client": "^4.8.3",
     "uuid": "^13.0.0",
