--- a/.env.example
+++ b/.env.example
@@ -24,10 +24,16 @@ APP_BASE_URL=http://localhost:8080
 # Optional override specifically for password reset links
 # PASSWORD_RESET_BASE_URL=https://app.example.com
 
-# Optional email provider (Resend) for sending reset links
-# If not set, reset links are logged on the server (development fallback)
-# RESEND_API_KEY=re_xxx
-# RESEND_FROM_EMAIL=SAFAR <no-reply@example.com>
+# Gmail SMTP for password reset emails (no custom domain required)
+# REQUIRED in production for forgot-password to work.
+# Use a Gmail account + 16-digit App Password (Google Account > Security > App passwords)
+# GMAIL_USER=yourgmail@gmail.com
+# GMAIL_APP_PASSWORD=your_16_digit_app_password
+# Optional sender display/email. Defaults to SAFAR Support <GMAIL_USER>
+# GMAIL_FROM_EMAIL=SAFAR Support <yourgmail@gmail.com>
+# Optional SMTP override (defaults below)
+# GMAIL_SMTP_HOST=smtp.gmail.com
+# GMAIL_SMTP_PORT=465
 
 # Legacy Turso variables (no longer used after PostgreSQL migration)
 # TURSO_DATABASE_URL=
