--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "mongodb": "^6.21.0",
+    "nodemailer": "^8.0.1",
     "razorpay": "^2.9.6",
     "recharts": "^2.12.7",
     "redis": "^4.7.0",
