--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,25 @@ REDIS_URL=redis://default:password@host:6379/0
 # Public base URL used in reset links (e.g. https://app.example.com)
 APP_BASE_URL=http://localhost:8080
 
+# MongoDB (required by current server routes)
+# Example: mongodb+srv://user:password@cluster.mongodb.net/?retryWrites=true&w=majority
+# MONGODB_URI=
+# MONGODB_DB_NAME=safar
+
+# Mehfil moderation controls
+# Set true only when you explicitly want to disable Mehfil access
+# MEHFIL_PAUSED=false
+# Groq API for AI moderation (recommended)
+# GROQ_API_KEY=
+# Optional model override
+# MEHFIL_GROQ_MODEL=llama-3.1-8b-instant
+# Optional TTL hours for flagged BULLSHIT posts
+# MEHFIL_BULLSHIT_TTL_HOURS=24
+# Shadow-ban threshold after repeated guideline violations
+# MEHFIL_SPAM_STRIKE_LIMIT=2
+# Comma-separated emails exempt from auto shadow-ban (for moderation QA)
+# MEHFIL_MODERATION_BYPASS_EMAILS=qa@example.com
+
 # Optional override specifically for password reset links
 # PASSWORD_RESET_BASE_URL=https://app.example.com
 
