--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "start": "node dist/server/node-build.mjs",
     "test": "vitest --run",
     "format.fix": "prettier --write .",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "backfill:mehfil": "tsx scripts/backfill-mehfil-moderation.ts"
   },
   "dependencies": {
     "@types/bcrypt": "^6.0.0",
