rules for ban/unban

--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,7 @@ APP_BASE_URL=http://localhost:8080
 # MONGODB_DB_NAME=safar
 
 # Mehfil moderation controls
+# You can keep these in .env_open (commit-safe) instead of .env.
 # Set true only when you explicitly want to disable Mehfil access
 # MEHFIL_PAUSED=false
 # Groq API for AI moderation (recommended)
@@ -39,6 +40,8 @@ APP_BASE_URL=http://localhost:8080
 # MEHFIL_SPAM_STRIKE_LIMIT=2
 # Comma-separated emails exempt from auto shadow-ban (for moderation QA)
 # MEHFIL_MODERATION_BYPASS_EMAILS=qa@example.com
+# Unique reports needed on a post to trigger automatic posting ban
+# MEHFIL_REPORTS_TO_BAN=1
 
 # Optional override specifically for password reset links
 # PASSWORD_RESET_BASE_URL=https://app.example.com
