--- a/.env_open
+++ b/.env_open
@@ -1,7 +1,12 @@
 # Commit-safe Mehfil policy defaults (non-secret).
 # Secrets like GROQ_API_KEY and DB credentials must remain in .env or host env vars.
 
-MEHFIL_PAUSED=true
+PORT=8080
+NODE_ENV=development
+APP_BASE_URL=http://localhost:8080
+GMAIL_USER=onesaffar@gmail.com
+
+MEHFIL_PAUSED=false
 MEHFIL_GROQ_MODEL=llama-3.1-8b-instant
 MEHFIL_BULLSHIT_TTL_HOURS=2
 MEHFIL_SPAM_STRIKE_LIMIT=2
