--- a/.env_open
+++ b/.env_open
@@ -6,9 +6,10 @@ NODE_ENV=development
 APP_BASE_URL=http://localhost:8080
 GMAIL_USER=onesaffar@gmail.com
 
-MEHFIL_PAUSED=true
+MEHFIL_PAUSED=false
 MEHFIL_GROQ_MODEL=llama-3.1-8b-instant
 MEHFIL_BULLSHIT_TTL_HOURS=2
 MEHFIL_SPAM_STRIKE_LIMIT=2
 MEHFIL_REPORTS_TO_BAN=1
 MEHFIL_MODERATION_BYPASS_EMAILS=steve123@example.com
+ADMIN_EMAILS=steve123@example.com,safarparmar0@gmail.com
