--- a/.env_open
+++ b/.env_open
@@ -3,7 +3,7 @@
 
 PORT=8080
 NODE_ENV=development
-APP_BASE_URL=http://localhost:8080
+APP_BASE_URL=https://safar.parmarssc.in/
 GMAIL_USER=onesaffar@gmail.com
 
 MEHFIL_PAUSED=false
