--- a/.env_open
+++ b/.env_open
@@ -6,7 +6,7 @@ NODE_ENV=development
 APP_BASE_URL=https://safar.parmarssc.in/
 GMAIL_USER=onesaffar@gmail.com
 
-MEHFIL_PAUSED=true
+MEHFIL_PAUSED=false
 MEHFIL_GROQ_MODEL=llama-3.1-8b-instant
 MEHFIL_BULLSHIT_TTL_HOURS=2
 MEHFIL_SPAM_STRIKE_LIMIT=2
