--- a/package.json
+++ b/package.json
@@ -23,12 +23,16 @@
   },
   "dependencies": {
     "@types/bcrypt": "^6.0.0",
+    "@types/compression": "^1.8.1",
     "bcrypt": "^6.0.0",
+    "compression": "^1.8.1",
     "connect-redis": "^8.0.2",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.5",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.2.1",
     "express-session": "^1.18.2",
+    "helmet": "^8.1.0",
     "mongodb": "^6.21.0",
     "nodemailer": "^8.0.1",
     "razorpay": "^2.9.6",
