Fix timer logic, UI overlap, and Android backend scaffolding
- Fixed custom timer logic for Short/Long breaks in StudyWithMe.tsx

- Added longBreakDuration to FocusContext

- Fixed text overlap in BreathingVisualizer.tsx

- Fixed syntax error in BreathingVisualizer.tsx

- Added Android backend files and docs

--- a/.env.example
+++ b/.env.example
@@ -68,3 +68,21 @@ RAZORPAY_KEY_ID=rzp_test_YOUR_KEY_ID
 RAZORPAY_KEY_SECRET=YOUR_KEY_SECRET
 # Optional: Webhook secret for payment notifications
 # RAZORPAY_WEBHOOK_SECRET=YOUR_WEBHOOK_SECRET
+
+# ── Mobile / Android App Auth (JWT) ──────────────────────────────────────────
+# Generate two long random strings (e.g.: openssl rand -hex 64)
+# JWT_ACCESS_SECRET=your-access-secret
+# JWT_REFRESH_SECRET=your-refresh-secret
+# Optional TTL overrides (default: 15m access, 30d refresh)
+# JWT_ACCESS_TTL=15m
+# JWT_REFRESH_TTL=30d
+
+# ── Mobile / Android Push Notifications (FCM) ────────────────────────────────
+# From Firebase Console → Project Settings → Service Accounts → Generate new private key
+# Paste the ENTIRE downloaded JSON as a single-line string value here.
+# FIREBASE_SERVICE_ACCOUNT_JSON={"type":"service_account","project_id":"..."}
+
+# ── Admin ─────────────────────────────────────────────────────────────────────
+# Comma-separated admin emails (used for Sandesh, Mehfil moderation, test-push)
+# ADMIN_EMAILS=admin@gmail.com,owner@gmail.com
+
