--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "dependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/compression": "^1.8.1",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "bcrypt": "^6.0.0",
     "compression": "^1.8.1",
     "connect-redis": "^8.0.2",
@@ -32,8 +34,11 @@
     "express": "^5.1.0",
     "express-rate-limit": "^8.2.1",
     "express-session": "^1.18.2",
+    "firebase-admin": "^13.6.1",
     "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.3",
     "mongodb": "^6.21.0",
+    "multer": "^2.0.2",
     "nodemailer": "^8.0.1",
     "razorpay": "^2.9.6",
     "recharts": "^2.12.7",
