--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "backfill:mehfil": "tsx scripts/backfill-mehfil-moderation.ts"
   },
   "dependencies": {
+    "@tailwindcss/container-queries": "^0.1.1",
+    "@tailwindcss/forms": "^0.5.11",
     "@types/bcrypt": "^6.0.0",
     "@types/compression": "^1.8.1",
     "@types/jsonwebtoken": "^9.0.10",
@@ -45,6 +47,7 @@
     "redis": "^4.7.0",
     "socket.io": "^4.8.3",
     "socket.io-client": "^4.8.3",
+    "tailwind-scrollbar-hide": "^4.0.0",
     "uuid": "^13.0.0",
     "zod": "^3.25.76",
     "zustand": "^5.0.10"
@@ -81,7 +84,7 @@
     "@react-three/drei": "^9.122.0",
     "@react-three/fiber": "^8.18.0",
     "@swc/core": "^1.13.3",
-    "@tailwindcss/typography": "^0.5.16",
+    "@tailwindcss/typography": "^0.5.19",
     "@tanstack/react-query": "^5.84.2",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
@@ -97,7 +100,7 @@
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
-    "framer-motion": "^12.23.12",
+    "framer-motion": "^12.34.3",
     "globals": "^16.3.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.539.0",
