chore: update environment variables in .env_open

--- a/.env_open
+++ b/.env_open
@@ -12,4 +12,4 @@ MEHFIL_BULLSHIT_TTL_HOURS=2
 MEHFIL_SPAM_STRIKE_LIMIT=2
 MEHFIL_REPORTS_TO_BAN=1
 MEHFIL_MODERATION_BYPASS_EMAILS=steve123@example.com
-ADMIN_EMAILS=steve123@example.com,safarparmar0@gmail.com
+ADMIN_EMAILS=steve123@example.com,safarparmar0@gmail.com,thatkindchic@gmail.com
